FIX: Long error messages overflew the error dialog
setting width and height using vh caused the dialog to recalculate its dimensions after being displayed. The dialog's position was not updated after that and it ended up partially out of the screen

--- a/src/model/entities/ErrorDialog.module.scss
+++ b/src/model/entities/ErrorDialog.module.scss
@@ -1,15 +1,17 @@
 .dialogContent {
-  width: 50vh;
   padding: 1.5em 1em;
   white-space: pre-wrap;
   display: flex;
+  max-height: 400px;
+  max-width: 527px;
 }
 
 .errorMessageList {
   display: flex;
   flex-direction: column;
   overflow: auto;
-  max-height: 40vh;
+  max-height: 350px;
+  max-width: 460px;
   flex: 1;
 }
 
